# chip8

./: CMakeLists.txt  LICENSE  README.md
enc_temp_folder/73b97b90c04b51d456db4825c57df3f/: node.h
include/: defines.h  opcode.h  vcpu.h  vm.h
include/assembler/: assembler.h
include/decoder/: decoder.h  isa.h
include/disassembler/: disassembler.h
include/encoder/: encoder.h
include/interpreter/: display.h  fontset.h  keypad.h  machine.h  processor.h
include/isa/: block.h  cfg.h  function.h  instruction.h  isa.h  mnemonic.h  opcodes.h  registers.h
include/isa/ir/: cfg.h  decoded.h  machine.h
include/isa/ir/ast/: ast.h
include/isa/ir/cfg/: basicblock.h  function.h  graph.h  node.h
include/isa/ir/decoded/: instruction.h
include/isa/ir/machine/: instruction.h  operand.h
include/tools/chip8-assembler/: lexer.h
include/tools/chip8-studio/: callstackmodel.h  disassemblymodel.h  displayview.h  memorymodel.h  registermodel.h  session.h  sessionview.h  studio.h
roms/: IBM Logo.c
source/assembler/: CMakeLists.txt  assembler.cpp
source/decoder/: CMakeLists.txt  decoder.cpp
source/disassembler/: CMakeLists.txt  disassembler.cpp
source/encoder/: CMakeLists.txt  encoder.cpp
source/interpreter/: CMakeLists.txt  display.cpp  machine.cpp  processor.cpp
source/tests/: CMakeLists.txt
source/tests/decoder_tests/: CMakeLists.txt  test_decoder.cpp
source/tools/chip8-assembler/: CMakeLists.txt  lexer.re  main.cpp
source/tools/chip8-disassembler/: CMakeLists.txt  main.cpp
source/tools/chip8-interpreter/: CMakeLists.txt  main.cpp
source/tools/chip8-studio/: CMakeLists.txt  callstackmodel.cpp  disassemblymodel.cpp  displayview.cpp  main.cpp  memorymodel.cpp  registermodel.cpp  session.cpp  studio.cpp
